Fix navbar rendering on Safari

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,11 +1,13 @@
 .dh-navbar-nav {
-  display: flex;
-  //float: left;
   margin: 0;
+  text-align: center;
 
   li {
+    @media only screen and (min-width: $screen-sm-min) {
+      display: inline-block;
+      width: 32.5%;
+    }
     //float: left;
-    flex-grow: 1;
     text-align: center;
 
     a {
